force-app/main/default/objects/AMFS_Knowledge__kav/fields/Benefit_Product_File_1__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Product_File_1__c</fullName>
    <label>Benefit Product File 1</label>
    <type>File</type>
</CustomField>