force-app/main/default/objects/AMFS_Knowledge__kav/fields/Information_File_1__c.field-meta.xml
<CustomField>
    <fullName>Information_File_1__c</fullName>
    <label>Information File 1</label>
    <type>File</type>
</CustomField>