force-app/main/default/objects/AMFS_Knowledge__kav/fields/Provision_File_1__c.field-meta.xml
<CustomField>
    <fullName>Provision_File_1__c</fullName>
    <label>Provision File 1</label>
    <type>File</type>
</CustomField>