force-app/main/default/objects/AMFS_Knowledge__kav/fields/Spec_Prod_File_1__c.field-meta.xml
<CustomField>
    <fullName>Spec_Prod_File_1__c</fullName>
    <label>Spec Prod File 1</label>
    <type>File</type>
</CustomField>