force-app/main/default/objects/AMFS_Knowledge__kav/fields/Syarat_dan_Ketentuan__c.field-meta.xml
<CustomField>
    <fullName>Syarat_dan_Ketentuan__c</fullName>
    <label>Syarat dan Ketentuan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>