force-app/main/default/objects/AMFS_Knowledge__kav/fields/Syarat_dan_Ketentuan_File_1__c.field-meta.xml
<CustomField>
    <fullName>Syarat_dan_Ketentuan_File_1__c</fullName>
    <label>Syarat dan Ketentuan File 1</label>
    <type>File</type>
</CustomField>